--- a/reservierungen/reservierungen.html
+++ b/reservierungen/reservierungen.html
@@ -260,7 +260,13 @@
     .modal-new-reservation form {
       display: flex;
       flex-direction: column;
-      gap: 16px;
+      gap: 18px;
+    }
+
+    .modal-new-reservation .sections-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      gap: 16px 20px;
     }
 
     .modal-new-reservation .section {
@@ -268,20 +274,29 @@
       border-radius: 8px;
       padding: 12px 14px 14px;
       background: #fafafa;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
 
     .modal-new-reservation .section h3 {
-      margin: 0 0 10px 0;
+      margin: 0;
       font-size: 15px;
       text-transform: uppercase;
       letter-spacing: 0.03em;
       color: #495057;
     }
 
-    .modal-new-reservation .section-grid {
+    .modal-new-reservation .field-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
       gap: 12px 16px;
+    }
+
+    .modal-new-reservation .field {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
     }
 
     .modal-new-reservation label {
@@ -320,18 +335,12 @@
     }
 
     .modal-new-reservation .checkbox-field {
-      display: flex;
+      display: inline-flex;
       align-items: center;
       gap: 8px;
-      margin-top: 6px;
       font-size: 13px;
       color: #495057;
-    }
-
-    .modal-new-reservation .count-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-      gap: 12px 16px;
+      font-weight: 500;
     }
 
     .modal-new-reservation .form-actions {
@@ -760,83 +769,79 @@
       <span id="newResModalClose" class="close">&times;</span>
       <h2>Neue Reservierung</h2>
       <form id="newReservationForm" novalidate>
-        <div class="section">
-          <h3>Gast &amp; Herkunft</h3>
-          <div class="section-grid">
-            <div>
-              <label for="newResNachname">Nachname*</label>
-              <input type="text" id="newResNachname" required>
+        <div class="sections-grid">
+          <div class="section">
+            <h3>Gast &amp; Herkunft</h3>
+            <div class="field-grid">
+              <div class="field">
+                <label for="newResNachname">Nachname*</label>
+                <input type="text" id="newResNachname" required>
+              </div>
+              <div class="field">
+                <label for="newResVorname">Vorname</label>
+                <input type="text" id="newResVorname">
+              </div>
+              <div class="field">
+                <label for="newResHerkunft">Herkunft</label>
+                <select id="newResHerkunft">
+                  <option value="">Bitte wählen...</option>
+                </select>
+              </div>
             </div>
-            <div>
-              <label for="newResVorname">Vorname</label>
-              <input type="text" id="newResVorname">
-            </div>
-            <div>
-              <label for="newResHerkunft">Herkunft</label>
-              <select id="newResHerkunft">
-                <option value="">Bitte wählen...</option>
-              </select>
-            </div>
-            <div>
-              <label for="newResCountry">Land*</label>
-              <select id="newResCountry" required>
-                <option value="">Bitte wählen...</option>
-              </select>
-            </div>
-            <div class="checkbox-field" style="grid-column: span 2;">
+            <label class="checkbox-field">
               <input type="checkbox" id="newResDog">
-              <label for="newResDog" style="margin-bottom: 0; font-weight: 500;">Gast reist mit Hund</label>
+              <span>Gast reist mit Hund</span>
+            </label>
+          </div>
+
+          <div class="section">
+            <h3>Reisedaten &amp; Arrangement</h3>
+            <div class="field-grid">
+              <div class="field">
+                <label for="newResAnreise">Anreise*</label>
+                <input type="date" id="newResAnreise" required>
+              </div>
+              <div class="field">
+                <label for="newResAbreise">Abreise*</label>
+                <input type="date" id="newResAbreise" required>
+                <small>Abreise muss nach der Anreise liegen.</small>
+              </div>
+              <div class="field">
+                <label for="newResArrangement">Arrangement*</label>
+                <select id="newResArrangement" required>
+                  <option value="">Bitte wählen...</option>
+                </select>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="section">
-          <h3>Reisedaten &amp; Arrangement</h3>
-          <div class="section-grid">
-            <div>
-              <label for="newResAnreise">Anreise*</label>
-              <input type="date" id="newResAnreise" required>
+          <div class="section">
+            <h3>Schlafplätze</h3>
+            <div class="field-grid">
+              <div class="field">
+                <label for="newResDZ">Doppelzimmer</label>
+                <input type="number" id="newResDZ" min="0" value="0">
+              </div>
+              <div class="field">
+                <label for="newResBetten">Betten</label>
+                <input type="number" id="newResBetten" min="0" value="0">
+              </div>
+              <div class="field">
+                <label for="newResLager">Lager</label>
+                <input type="number" id="newResLager" min="0" value="0">
+              </div>
+              <div class="field">
+                <label for="newResSonder">Sonder</label>
+                <input type="number" id="newResSonder" min="0" value="0">
+              </div>
             </div>
-            <div>
-              <label for="newResAbreise">Abreise*</label>
-              <input type="date" id="newResAbreise" required>
-              <small>Abreise muss nach der Anreise liegen.</small>
-            </div>
-            <div>
-              <label for="newResArrangement">Arrangement*</label>
-              <select id="newResArrangement" required>
-                <option value="">Bitte wählen...</option>
-              </select>
-            </div>
+            <small>Summe der Schlafplätze muss mindestens 1 betragen.</small>
           </div>
-        </div>
 
-        <div class="section">
-          <h3>Schlafplätze</h3>
-          <div class="count-grid">
-            <div>
-              <label for="newResDZ">Doppelzimmer</label>
-              <input type="number" id="newResDZ" min="0" value="0">
-            </div>
-            <div>
-              <label for="newResBetten">Betten</label>
-              <input type="number" id="newResBetten" min="0" value="0">
-            </div>
-            <div>
-              <label for="newResLager">Lager</label>
-              <input type="number" id="newResLager" min="0" value="0">
-            </div>
-            <div>
-              <label for="newResSonder">Sonder</label>
-              <input type="number" id="newResSonder" min="0" value="0">
-            </div>
+          <div class="section">
+            <h3>Bemerkung</h3>
+            <textarea id="newResBemerkung" placeholder="Interne Notizen zur Reservierung"></textarea>
           </div>
-          <small>Summe der Schlafplätze muss mindestens 1 betragen.</small>
-        </div>
-
-        <div class="section">
-          <h3>Bemerkung</h3>
-          <textarea id="newResBemerkung" placeholder="Interne Notizen zur Reservierung"></textarea>
         </div>
 
         <div class="form-actions">
