Weitere Optimierung ZP

--- a/zp/timeline-config.html
+++ b/zp/timeline-config.html
@@ -14,70 +14,70 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #f3f4f7;
             min-height: 100vh;
-            padding: 15px;
-            font-size: 14px;
+            padding: 10px;
+            font-size: 13px;
         }
 
         .config-container {
-            max-width: 1000px;
+            max-width: 960px;
             margin: 0 auto;
             background: white;
             border-radius: 8px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 12px rgba(0, 0, 0, 0.08);
             overflow: hidden;
         }
 
         .config-header {
-            background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
+            background: linear-gradient(135deg, #4facfe 0%, #00c6ff 100%);
             color: white;
-            padding: 20px;
+            padding: 14px 16px;
             text-align: center;
         }
 
         .config-header h1 {
-            font-size: 1.8em;
-            margin-bottom: 5px;
-            font-weight: 300;
+            font-size: 1.4em;
+            margin-bottom: 4px;
+            font-weight: 400;
         }
 
         .config-header p {
-            font-size: 0.9em;
-            opacity: 0.9;
+            font-size: 0.85em;
+            opacity: 0.85;
         }
 
         .config-content {
-            padding: 20px;
+            padding: 14px 16px 18px;
         }
 
         .config-section {
-            margin-bottom: 20px;
-            padding: 15px;
-            border: 1px solid #e0e0e0;
+            margin-bottom: 14px;
+            padding: 12px;
+            border: 1px solid #e5e8ef;
             border-radius: 6px;
-            background: #fafafa;
+            background: #fbfcfd;
         }
 
         .config-section h2 {
-            color: #333;
-            margin-bottom: 15px;
-            font-size: 1.2em;
-            border-bottom: 2px solid #4facfe;
-            padding-bottom: 5px;
+            color: #2d3748;
+            margin-bottom: 10px;
+            font-size: 1.05em;
+            border-bottom: 1px solid #dde1eb;
+            padding-bottom: 4px;
         }
 
         .theme-selector {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-            gap: 10px;
-            margin-bottom: 15px;
+            grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
+            gap: 8px;
+            margin-bottom: 12px;
         }
 
         .theme-card {
             border: 2px solid #ddd;
             border-radius: 6px;
-            padding: 10px;
+            padding: 8px;
             cursor: pointer;
             transition: all 0.2s ease;
             background: white;
@@ -131,21 +131,21 @@
 
         .config-group {
             background: white;
-            padding: 15px;
+            padding: 12px;
             border-radius: 6px;
-            border: 1px solid #e0e0e0;
+            border: 1px solid #e5e8ef;
         }
 
         .config-group h3 {
-            color: #333;
-            margin-bottom: 12px;
-            font-size: 1em;
+            color: #2d3748;
+            margin-bottom: 10px;
+            font-size: 0.95em;
             border-left: 3px solid #4facfe;
-            padding-left: 10px;
+            padding-left: 8px;
         }
 
         .config-item {
-            margin-bottom: 12px;
+            margin-bottom: 10px;
         }
 
         .config-item label {
@@ -176,13 +176,13 @@
 
         .metrics-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
             gap: 8px;
         }
 
         .metric-item {
             text-align: center;
-            padding: 8px;
+            padding: 6px 8px;
             background: white;
             border: 1px solid #ddd;
             border-radius: 4px;
