--- a/zp/timeline-unified.html
+++ b/zp/timeline-unified.html
@@ -117,7 +117,7 @@
 
         // ===== GLOBAL VARIABLES =====
         let timelineRenderer = null; // Timeline-Renderer-Instanz
-        arrangementsCatalog = [];
+        window.arrangementsCatalog = [];
 
         // ===== FUNCTION DEFINITIONS (moved to top for onclick availability) =====
 
